objects/ebsta1__EbstaObjectSearchFields__c.object
<CustomObject>
    <description>Object Search fields.</description>
    <fields>
        <fullName>ebsta1__CleanToDomain__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CleanToDomain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ebsta1__Controller__c</fullName>
        <label>Controller</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebsta1__FieldSelect__c</fullName>
        <label>FieldSelect</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebsta1__FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebsta1__RelationshipFields__c</fullName>
        <label>RelationshipFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EbstaObjectSearchField</label>
    <listViews>
        <fullName>ebsta1__All</fullName>
        <columns>NAME</columns>
        <columns>ebsta1__Controller__c</columns>
        <columns>ebsta1__FieldSelect__c</columns>
        <columns>ebsta1__FieldValue__c</columns>
        <columns>ebsta1__RelationshipFields__c</columns>
        <columns>ebsta1__CleanToDomain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ObjectSearchFields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EbstaObjectSearchFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>